--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "myresume",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "10.15.0",
+    "npm": "6.13.0"
+  },
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
